# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Espresso library.

[package]
name = "espresso-validator"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2018"
default-run = "espresso-validator"

[dependencies]
address-book = { path = "../address-book", optional = true }
ark-serialize = { version = "0.3.0", features = ["derive"] }
ark-std = { version = "0.3.0", default-features = false }
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
async-trait = "0.1.56"
async-tungstenite = { version = "0.15.0", features = ["async-std-runtime"], optional = true }
bincode = "1.3.3"
clap = { version = "4.0", features = ["derive", "env"] }
cld = "0.4"
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.2.0" }
derive_more = "0.99"
dirs = "4.0"
escargot = "0.5.2"
espresso-availability-api = { path = "../apis/availability", optional = true }
espresso-core = { path = "../core/" }
espresso-esqs = { path = "../apis/esqs" }
espresso-metastate-api = { path = "../apis/metastate", optional = true }
espresso-status-api = { path = "../apis/status" }
espresso-validator-api = { path = "../apis/validator" }
futures = "0.3.0"
futures-util = "0.3.8"
hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.3.3", features = ["async-std-executor", "channel-async-std"] }
hotshot-centralized-server = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.3.3" }
hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.3.3", features = ["async-std-executor", "channel-async-std"] }
human_bytes = "0.3"
itertools = "0.10.1"
jf-cap = { features = ["std","test_apis"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
jf-plonk = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.2" }
jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.2" }
jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.2" }
libp2p = "0.49"
libp2p-networking = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.3.3" }
markdown = "0.3"
portpicker = { version = "0.1", optional = true }
rand = "0.8.5"
rand_chacha = { package = "rand_chacha", version = "0.3.1" }
rand_chacha_02 = { package = "rand_chacha", version = "0.2.2" }
reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.3.1", optional = true }
seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", tag = "0.3.2", optional = true }
serde = { version = "1.0.139", features = ["derive", "rc"] }
serde_derive = "1.0.118"
serde_json = "1.0.61"
sha3 = "^0.10.4"
shellexpand = "2.0"
snafu = { version = "0.7", features = ["backtraces"] }
static_assertions = "1.1"
strum = "0.24"
strum_macros = "0.24"
surf-disco = { git = "https://github.com/EspressoSystems/surf-disco.git", tag = "0.1.0" }
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.2.1" }
tempdir = "0.3.7"
tracing = "0.1.35"
tracing-distributed = "0.3.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.3"

[features]
slow-tests = []
testing = ["address-book", "async-tungstenite", "espresso-availability-api", "espresso-metastate-api", "portpicker", "reef/testing", "seahorse"]

[dev-dependencies]
address-book = { path = "../address-book" }
espresso-client = { path = "../client" }
portpicker = "0.1"
tracing-test = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.14.1"

[[bin]]
name = "test-query-api"
required-features = ["testing"]
test = true
