# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Espresso library.

[package]
name = "espresso-availability-api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "0.3.0", features = ["derive"] }
ark-std = { version = "0.3.0", default-features = false }
clap = { version = "4.0", features = ["derive", "env"] }
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.2.0" }
derive_more = "0.99"
espresso-core = { path = "../../core/" }
futures = "0.3.21"
hotshot-types = { git = "ssh://git@github.com/EspressoSystems/HotShot.git", tag = "0.3.3", features = ["async-std-executor", "channel-async-std"] }
jf-cap = { features = ["std"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.2" }
serde = { version = "1.0", features = ["derive"] }
snafu = { version = "0.7", features = ["backtraces"] }
tide-disco = { git = "ssh://git@github.com/EspressoSystems/tide-disco.git", tag = "v0.3.1" }
toml = "0.5"
tracing = "0.1.35"
