# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Espresso library.
#
# This program is free software: you can redistribute it and/or modify it under the terms of the GNU
# General Public License as published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
# even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
# You should have received a copy of the GNU General Public License along with this program. If not,
# see <https://www.gnu.org/licenses/>.

[package]
name = "espresso-esqs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "0.3.0", features = ["derive"] }
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-trait = "0.1.56"
async_executors = { version = "0.4.2", features = ["async_std"] }
atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", tag = "0.1.3" }
clap = { version = "4.0", features = ["derive", "env"] }
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.2.0" }
derive_more = "0.99"
espresso-availability-api = { path = "../availability" }
espresso-catchup-api = { path = "../catchup" }
espresso-core = { path = "../../core/" }
espresso-metastate-api = { path = "../metastate" }
espresso-status-api = { path = "../status" }
espresso-validator-api = { path = "../validator" }
futures = "0.3.21"
hotshot = { git = "ssh://git@github.com/EspressoSystems/HotShot.git", tag = "0.2.1", features = ["async-std-executor", "channel-async-std"] }
hotshot-types = { git = "ssh://git@github.com/EspressoSystems/HotShot.git", tag = "0.2.1", features = ["async-std-executor", "channel-async-std"] }
itertools = "0.10.1"
jf-cap = { features = ["std","test_apis"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
postage = { version = "0.5", features = ["futures-traits"] }
reef = { git = "https://github.com/EspressoSystems/reef.git", features = ["testing"] }
seahorse = { git = "https://github.com/EspressoSystems/seahorse.git" }
serde = { version = "1.0", features = ["derive"] }
snafu = { version = "0.7", features = ["backtraces"] }
tide-disco = { git = "ssh://git@github.com/EspressoSystems/tide-disco.git", tag = "v0.3.1" }
tracing = "0.1.35"
