# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Espresso library.

[package]
name = "espresso-validator-api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
clap = { version = "4.0", features = ["derive", "env"] }
derive_more = "0.99"
espresso-core = { path = "../../core/" }
futures = "0.3.21"
hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.3.3", features = ["async-std-executor", "channel-async-std"] }
serde = { version = "1.0.139", features = ["derive", "rc"] }
snafu = { version = "0.7", features = ["backtraces"] }
tide-disco = { git = "https://github.com/EspressoSystems/tide-disco.git", tag = "v0.3.1" }
toml = "0.5"
