[package]
name = "asynctide"
version = "0.1.0"
authors = ["John D. Corbett <corbett@pictographer.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
futures-util = "0.3.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0.61"
tide = "0.16.0"
tide-websockets = "0.4.0"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2.19"
