[package]
name = "multi_machine"
version = "0.1.0"
authors = ["Keyao Shen <keyao@translucence.net>", "corbett@pictographer.com"]
edition = "2018"
license = "Copyright © 2021 Translucence Research, Inc. All rights reserved."

[dependencies]
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
bincode = "1.3.3"
futures = "0.3.0"
futures-util = "0.3.8"
jf-plonk = { features=["std"], git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "2f978e10bf8f379000b4bcca393e25529e4b0b8f"}
jf-primitives = { features=["std"], git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "2f978e10bf8f379000b4bcca393e25529e4b0b8f"}
jf-txn = { features=["std"], git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "2f978e10bf8f379000b4bcca393e25529e4b0b8f"}
jf-utils = { features=["std"], git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "2f978e10bf8f379000b4bcca393e25529e4b0b8f"}
phaselock = { version = "0.0.1", registry = "translucence" }
rand_xoshiro = "0.4.0"
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_derive = "1.0.118"
serde_json = "1.0.61"
shellexpand = "2.0"
structopt = { version = "0.3", features = ["paw"] }
strum = "0.20"
strum_macros = "0.20.1"
tagged-base64 = { git = "ssh://git@gitlab.com/translucence/common/tagged-base64.git", branch = "main"}
threshold_crypto = "0.4.0"
tide = "0.16.0"
tide-websockets = "0.4.0"
toml = "0.5"
tracing = "0.1.26"
tracing-distributed = "0.3.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2.19"
zerok_lib = { path = "../../zerok/zerok_lib/" }
