[package]
name = "multi_machine"
version = "0.1.0"
authors = ["Keyao Shen <keyao@translucence.net>", "corbett@pictographer.com"]
edition = "2018"
license = "Copyright (c) 2022 Espresso Systems (espressosys.com)"
default-run = "multi_machine"

[dependencies]
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
async-trait = "0.1.51"
async-tungstenite = { version = "0.15.0", features = ["async-std-runtime"] }
bincode = "1.3.3"
futures = "0.3.0"
futures-util = "0.3.8"
itertools = "0.10.1"
jf-cap = { features = ["std","test_apis"], git = "https://github.com/EspressoSystems/cap.git" }
jf-plonk = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
key-set = { git = "https://github.com/EspressoSystems/key-set.git" }
markdown = "0.3"
net = { git = "https://github.com/EspressoSystems/net.git" }
# phaselock = { version = "0.0.6" }
phaselock = { git = "ssh://git@github.com/EspressoSystems/phaselock.git", rev = "60b85f7eba2f93704682ce697c109f10eb47894c" }
rand_chacha = "0.2.2"
seahorse = { git = "https://github.com/EspressoSystems/seahorse.git" }
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_derive = "1.0.118"
serde_json = "1.0.61"
shellexpand = "2.0"
snafu = { version = "0.6.10", features = ["backtraces"] }
structopt = { version = "0.3", features = ["paw"] }
strum = "0.20"
strum_macros = "0.20.1"
surf = "2.3.1"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", branch = "main" }
tempdir = "0.3.7"
threshold_crypto = "0.4.0"
tide = "0.16.0"
tide-websockets = "0.4.0"
toml = "0.5"
tracing = "0.1.26"
tracing-distributed = "0.3.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2.19"
zerok_lib = { path = "../../zerok/zerok_lib/" }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.11.0"

