[package]
name = "tideui"
version = "0.1.0"
authors = ["John D. Corbett <corbett@pictographer.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
tide = "0.16.0"
tide-tracing = "0.0.11"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2.19"
tungstenite = "0.13.0"
