# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Espresso library.

[package]
name = "faucet-types"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"

[dependencies]
atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", version = "0.1.3" }
jf-cap = { git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
serde = "1.0.139"
snafu = "0.7.1"
tide-disco = { git = "ssh://git@github.com/EspressoSystems/tide-disco.git", tag = "v0.3.1" }
