[package]
name = "counter"
version = "0.1.0"
authors = ["Joe Doyle <joe@translucence.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotstuff = { git = "ssh://git@gitlab.com/translucence/systems/hotstuff.git", branch = "main"}
async-lock = "2.4.0"
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
async-tls = "0.11.0"
futures = "0.3.0"
rand = "0.7.3"
serde = { version = "1.0.123", features = ["derive", "rc"] }
threshold_crypto = "0.4.0"
tokio = { version = "0.2.13", features = ["sync"], default-features = false }
tracing = "0.1.26"
tracing-error = "0.1.2"
tracing-futures = "0.2.5"
tracing-unwrap = "0.9.2"

