[package]
name = "system"
version = "0.1.0"
authors = ["corbett@pictographer.com"]
edition = "2018"
description = "Top level of the Translucence core system"
repository = "https://gitlab.com/translucence/systems/system"
license = "Copyright © 2021 Translucence Research, Inc. All rights reserved."

[dependencies]
itertools = "0.10.1"
bitvec = "0.20.4"
log = "0.4"
rand_chacha = "0.3.1"
rocket = "0.5.0-rc.1"
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_derive = "1.0"
shellexpand = "2.0"
structopt = { version = "0.3", features = ["paw"] }
strum = "0.20"
strum_macros = "0.20.1"
toml = "0.4.2"
tracing = "0.1"
tracing-subscriber = "0.2"
# phaselock = { version = "0.0.2", registry = "translucence" }
phaselock = { git = "ssh://git@gitlab.com/translucence/systems/phaselock.git", rev = "7b01c31a4953170455d595c71ae3a3713119e5a6" }
tagged-base64 = { git = "ssh://git@gitlab.com/translucence/common/tagged-base64.git", branch = "main"}

# per https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html, this should work for each project in the workspace
# however, the fact that the workspace subpath specifications do not match the expected package name may present a problem
jf-plonk = { features=["std"], git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "787130cccdec290403e4b0f1291291f128bacd1c"}
jf-primitives = { features=["std"], git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "787130cccdec290403e4b0f1291291f128bacd1c"}
jf-txn = { features=["std"], git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "787130cccdec290403e4b0f1291291f128bacd1c"}
jf-utils = { features=["std"], git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "787130cccdec290403e4b0f1291291f128bacd1c"}

zerok_lib = { path = "../zerok_lib/" }

# [dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
