[package]
name = "espresso-validator-status-api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jf-cap = { features = ["std"], git = "https://github.com/EspressoSystems/cap.git" }
phaselock = { git = "ssh://git@github.com/EspressoSystems/phaselock.git", rev = "60b85f7eba2f93704682ce697c109f10eb47894c" }
zerok_lib = { path = "../zerok_lib/" }
