[package]
name = "zerok_client"
version = "0.1.0"
authors = ["Joe Doyle <joe@translucence.net>"]
edition = "2018"
default-run = "zerok_client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-trait = "0.1.51"
bincode = "1.3.3"
escargot = "0.5.2"
futures = "0.3.16"
jf-plonk = { features=["std"], git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "4d7e1c38e3f41d83e5b93f0eca1ae0663f221a5e"}
jf-primitives = { features=["std"], git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "4d7e1c38e3f41d83e5b93f0eca1ae0663f221a5e"}
jf-txn = { features=["std"], git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "4d7e1c38e3f41d83e5b93f0eca1ae0663f221a5e"}
jf-utils = { features=["std"], git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "4d7e1c38e3f41d83e5b93f0eca1ae0663f221a5e"}
lazy_static = "1.4.0"
rand = "0.8.4"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
regex = "1.5.4"
rpassword = "5.0.1"
rustyline = "9.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.61"
snafu = { version = "0.6.10", features = ["backtraces"] }
shutdown_hooks = "0.1.0"
structopt = { version = "0.3", features = ["paw"] }
surf = "2.3.1"
tagged-base64 = { git = "ssh://git@gitlab.com/translucence/common/tagged-base64.git", branch = "main"}
tempdir = "0.3.7"
toml = "0.5"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
zerok_lib = { path = "../zerok_lib/" }
