[package]
name = "zerok_client"
version = "0.1.0"
authors = ["Joe Doyle <joe@translucence.net>"]
edition = "2018"
default-run = "zerok_client"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-trait = "0.1.51"
bincode = "1.3.3"
escargot = "0.5.2"
espresso-validator = { path = "../../validator", features = ["testing"] }
futures = "0.3.16"
jf-cap = { features = ["std","test_apis"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
jf-plonk = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
lazy_static = "1.4.0"
portpicker = "0.1"
rand = "0.8.4"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
regex = "1.5.4"
rustyline = "9.0.0"
seahorse = { git = "https://github.com/EspressoSystems/seahorse.git" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.61"
snafu = { version = "0.7", features = ["backtraces"] }
structopt = { version = "0.3", features = ["paw"] }
surf = "2.3.1"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.1.0" }
tempdir = "0.3.7"
toml = "0.5"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
zerok_lib = { path = "../zerok_lib/" }
