[package]
name = "zerok_lib"
version = "0.1.0"
authors = ["Joe Doyle <joe@translucence.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version="1.0", features=["derive"] }
atomic_store = { version="0.0.2", registry="translucence" }
chacha20 = "0.8.1"
commit = { git = "ssh://git@github.com/SpectrumXYZ/commit.git", rev = "ce0249eb2e7cd9eb1a1df04dbe7a6f88adfc8e80" }
itertools = "0.10.1"
# per https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html, this should work for each project in the workspace
# however, the fact that the workspace subpath specifications do not match the expected package name may present a problem
jf-plonk = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "eb8d3d3b03fec0d88327f4686e8a2787c85274d9"}
jf-primitives = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "eb8d3d3b03fec0d88327f4686e8a2787c85274d9"}
jf-aap = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "eb8d3d3b03fec0d88327f4686e8a2787c85274d9"}
jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "eb8d3d3b03fec0d88327f4686e8a2787c85274d9"}
# phaselock = { version = "0.0.2", registry = "translucence"}
phaselock = { git = "ssh://git@github.com/SpectrumXYZ/phaselock.git", rev = "14586ed218a35cb48675b73d4a34ae7ae55c67e6" }
ark-std = { version = "0.3.0", default-features = false }
ark-ff = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0", features = ["derive"] }
hmac = "0.11.0"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
rand = "0.7.3"
rust-argon2 = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.61"
serde_cbor = "*"
serde_with = "1.10.0"
snafu = { version = "0.6.10", features = ["backtraces"] }
tagged-base64 = { git = "ssh://git@github.com/SpectrumXYZ/tagged-base64.git", branch = "main"}
threshold_crypto = "0.4.0"
sha3 = "^0.9"
bitvec = "^0.22"
rayon = "*"
generic-array = { version = "0.14.4", features = ["serde"] }
lazy_static = "1.4.0"
bincode = "1.3.3"
async-scoped = { version = "0.7.0", features = ["use-async-std"] }
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-trait = "0.1.51"
async-tungstenite = { version = "0.15.0", features = ["async-std-runtime"] }
async_executors = { version = "0.4.2", features = ["async_std"] }
futures = "0.3.16"
rpassword = "5.0.1"
rustyline = "9.0.0"
strum = "0.20"
strum_macros = "0.20.1"
surf = "2.3.1"
tempdir = "0.3.7"
tide = "0.16.0"
tracing = "0.1.26"
zeroize = "1.3"
zerok-macros = { path = "../zerok_macros" }
hex = "0.4.3"
chrono = "0.4.19"
mnemonic = "1.0.1"
reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git", rev = "34725636bbde038176d39dbf6b948ab0a0a0793c" }

[dev-dependencies]
generic-tests = "0.1.2"
quickcheck = "1.0"
quickcheck_macros = "1.0"
proptest = "0.8.7"
rand_xoshiro = "0.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.11.0"

[features]
mocks = []
